# hypreact

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  hyprpm.toml
docs/: architecture.md  css.md  development.md  implementation-plan.md  runtime.md
examples/config/: hyprland.conf  index.css
examples/config/layouts/first/: index.tsx
sdk/: jsx-runtime.d.ts  jsx-runtime.js  layout.d.ts
src/: main.cpp
src/domain/: layout_node.cpp  layout_node.hpp  runtime_snapshot.hpp
src/layout/: geometry.hpp  layout_engine.cpp  layout_engine.hpp  resolver.cpp  resolver.hpp  validator.cpp  validator.hpp
src/plugin/: hyprland_compat.hpp  plugin.cpp  plugin.hpp  runtime_snapshot.cpp  runtime_snapshot.hpp
src/runtime/: compiler.cpp  compiler.hpp  quickjs_runtime.cpp  quickjs_runtime.hpp
src/style/: debug_dump.cpp  debug_dump.hpp  libcss_bridge.cpp  libcss_bridge.hpp  libcss_probe.cpp  libcss_probe.hpp  libcss_selector_adapter.cpp  libcss_selector_adapter.hpp  stylesheet.cpp  stylesheet.hpp
tests/: debug_dump_preview.cpp  libcss_c_adapter_repro.c  libcss_c_repro.c  selector_callback_repro.cpp  selector_match_repro.cpp  style_test_utils.cpp  style_test_utils.hpp  style_tests.cpp
tests/fixtures/: debug-dump-golden-diagnostics.jsonl  debug-dump-golden-nomatch.jsonl  debug-dump-golden-numeric-probe.jsonl  debug-dump-golden-rich.jsonl  debug-dump-golden-traced.jsonl  debug-dump-golden.jsonl  libcss-attribute.css  libcss-auto.css  libcss-descendant-focus.css  libcss-descendant.css  libcss-display-focus.css  libcss-display.css  libcss-geometry-nomatch.css  libcss-geometry.css  libcss-invalid.css  libcss-longhand-precedence.css  libcss-maxmin-inset.css  libcss-percent.css  libcss-position.css  libcss-pseudostate-focus.css  libcss-pseudostate.css
